# tataku-common

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-temp_disabled  Cargo.toml  README.md  client  client-neb  publish.sh
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc-macros/tests/: tests.rs
taiko-rs-client/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  icon.pdn
taiko-rs-client/src/: commits.rs  enums.rs  main.rs  prelude.rs
taiko-rs-client/src/beatmaps/: mod.rs
taiko-rs-client/src/beatmaps/adofai/: adofai_beatmap.rs  mod.rs
taiko-rs-client/src/beatmaps/common/: beatmap_meta.rs  mod.rs  timing_point.rs  trs_beatmap.rs
taiko-rs-client/src/beatmaps/osu/: hitobject_defs.rs  mod.rs  osu_beatmap.rs
taiko-rs-client/src/beatmaps/quaver/: mod.rs  quaver_beatmap.rs
taiko-rs-client/src/databases/: mod.rs  score_database.rs
taiko-rs-client/src/errors/: audio_error.rs  beatmap_error.rs  gl_error.rs  mod.rs  taiko_error.rs
taiko-rs-client/src/game/: audio.rs  fonts.rs  game.rs  input_manager.rs  mod.rs  settings.rs
taiko-rs-client/src/game/audio/: audio.rs  bass_audio.rs  fft.rs  handle.rs  instance.rs  mod.rs  queue.rs  sound.rs  utils.rs
taiko-rs-client/src/game/audio/neb_audio/: audio.rs  fft.rs  handle.rs  instance.rs  mod.rs  queue.rs  sound.rs  utils.rs
taiko-rs-client/src/game/helpers/: beatmap_manager.rs  benchmark_helper.rs  centered_text_helper.rs  curve.rs  discord.rs  fps_display.rs  io.rs  key_counter.rs  math.rs  mod.rs  skin_helper.rs  slider.rs  transform.rs  vector2.rs  volume_control.rs
taiko-rs-client/src/game/managers/: beatmap_manager.rs  cursor_manager.rs  drawing_manager.rs  input_manager.rs  mod.rs  mod_manager.rs  notification_manager.rs  spectator_manager.rs
taiko-rs-client/src/game/online/: chat.rs  discord.rs  mod.rs  online_manager.rs  online_user.rs
taiko-rs-client/src/game/settings/: catch_settings.rs  mania_settings.rs  mod.rs  settings.rs  standard_settings.rs  taiko_settings.rs
taiko-rs-client/src/gameplay/: beatmap.rs  ingame_manager.rs  ingame_score.rs  mod.rs  note.rs  replay.rs  score.rs
taiko-rs-client/src/gameplay/beatmap_structs/: hitobject.rs  hitobject_defs.rs  mod.rs  storyboard.rs  timing_point.rs
taiko-rs-client/src/gameplay/diff_calc/: calculator.rs  difficulty_hit_object.rs
taiko-rs-client/src/gameplay/modes/: mod.rs
taiko-rs-client/src/gameplay/modes/catch/: catch.rs  catch_notes.rs  mod.rs
taiko-rs-client/src/gameplay/modes/mania/: mania.rs  mania_notes.rs  mod.rs
taiko-rs-client/src/graphics/: border.rs  circle.rs  half_circle.rs  image.rs  line.rs  mod.rs  prelude.rs  rectangle.rs  render_target.rs  text.rs  transform.rs  transform_group.rs
taiko-rs-client/src/menu/: beatmap_select.rs  direct_menu.rs  loading_menu.rs  main_menu.rs  menu.rs  mod.rs  pause_menu.rs  score_menu.rs  settings_menu.rs
taiko-rs-client/src/menu/dialog/: beatmap_dialog.rs  changelog_dialog.rs  dialog.rs  mod.rs  mods_dialog.rs  normal_dialog.rs
taiko-rs-client/src/menu/direct_menu/: direct_downloadable.rs  direct_menu.rs  helpers.rs  mod.rs  prelude.rs  queue_item.rs
taiko-rs-client/src/menu/menu_elements/: button.rs  checkbox.rs  graph.rs  key_button.rs  mod.rs  password_input.rs  scrollable_area.rs  section.rs  slider.rs  text_input.rs
taiko-rs-client/src/render/: color.rs  shapes.rs
taiko-rs-client/src/skinning/: mod.rs  skin_config.rs  skin_helper.rs
taiko-rs-client/src/visualization/: menu_visualization.rs  mod.rs  visualization.rs
taiko-rs-common/: Cargo.toml
taiko-rs-common/src/: lib.rs  prelude.rs
taiko-rs-common/src/packets/: mod.rs  packets.rs
taiko-rs-common/src/serialization/: mod.rs  serialization.rs  versioned_serialization.rs
taiko-rs-common/src/tables/: message_history_table.rs  mod.rs  scores_table.rs  user_data_table.rs  users_table.rs
taiko-rs-common/src/types/: login_status.rs  mod.rs  playmode.rs  replay.rs  score.rs  server_error_code.rs  server_permissions.rs  spectator.rs  user_status.rs
taiko-rs-http/: Cargo.toml
taiko-rs-http/src/: main.rs
taiko-rs-ws/: Cargo.toml  run.bat
taiko-rs-ws/src/: helpers.rs  main.rs  message_history_table.rs  packet_helpers.rs  prelude.rs  settings.rs  user_connection.rs
taiko-rs-ws/src/database/: database.rs  mod.rs
taiko-rs-ws/src/helpers/: helpers.rs  mod.rs  packet_helpers.rs
taiko-rs-ws/src/settings/: mod.rs  postgres_settings.rs  settings.rs
tataku-common/: Cargo.toml
tataku-common-proc-macro-tests/: Cargo.toml
tataku-common-proc-macro-tests/src/: main.rs
tataku-common-proc-macros/: Cargo.toml
tataku-common-proc-macros/src/: from_string.rs  lib.rs  packets.rs  reflect.rs  serializable.rs
tataku-common-proc-macros/tests/: tests.rs
tataku-common/src/: lib.rs  prelude.rs
tataku-common/src/packets/: chat_packets.rs  mod.rs  multiplayer_packets.rs  packet.rs  packets.rs  spectator_packets.rs
tataku-common/src/reflection/: atomics.rs  containers.rs  dyn_map.rs  map.rs  maps.rs  maybe_owned.rs  mod.rs  multiparse.rs  number.rs  reflect.rs  reflect_error.rs  reflect_iter.rs  reflect_path.rs  slice.rs  stringable.rs  strings.rs  tuple.rs
tataku-common/src/serialization/: error.rs  mod.rs  reader.rs  serializable.rs  serialization.rs  writer.rs
tataku-common/src/tables/: mod.rs  users_table.rs
tataku-common/src/tests/: mod.rs
tataku-common/src/types/: login_status.rs  md5_hash.rs  mod.rs  mod_definition.rs  score.rs  server_drop_reason.rs  server_error_code.rs  server_permissions.rs  severity.rs  user_action.rs  user_status.rs
tataku-common/src/types/helpers/: game_speed.rs  map_game.rs  mod.rs  score_submit.rs
tataku-common/src/types/multiplayer/: lobby_info.rs  lobby_slot.rs  lobby_state.rs  lobby_user.rs  lobby_user_state.rs  mod.rs
tataku-common/src/types/network/: login_status.rs  mod.rs  server_drop_reason.rs  server_error_code.rs  server_permissions.rs  severity.rs
tataku-common/src/types/replays/: key_press.rs  mod.rs  replay.rs  replay_action.rs  replay_frame.rs
tataku-common/src/types/spectator/: mod.rs  spectator_action.rs  spectator_frame.rs  spectator_result.rs
(+106 files in other folders)
