[package]
name = "taiko"
version = "0.1.0"
authors = ["Eve <hi.its.eve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
textures = []
unlimited_fps = []

[dependencies]
tokio = {version = "1.7.1", features = ["rt"] }
clipboard = "0.5.0"
zip = "0.5"
reqwest = { version = "0.11.4", features = ["blocking"] }
md5 = "0.7.0"
image = "0.23.0"
lazy_static = "1.4.0"
rodio = "0.14.0"
cgmath = "0.18.0"
piston = "0.53.0"
piston2d-opengl_graphics = "0.78.0"
piston2d-graphics = "0.40.0"
pistoncore-glfw_window = "0.71.0"