[package]
name = "tataku-common"
version = "0.5.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [ "sea-orm" ]

[dependencies]
serde = { version="1.0", features=[ "derive" ] }
sea-orm = { version = "0.8", features = [ "sqlx-postgres", "runtime-tokio-rustls" ], optional = true }

# tataku-proc-macros = { path = "../tataku-proc-macros" }
tataku-proc-macros = { git = "https://gitlab.ayyeve.xyz/tataku/proc-macros" }