[package]
name = "tataku-common"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [ "sea-orm" ]

[dependencies]
serde = { version="1.0", features=[ "derive" ] }
serde_json = "1"
sea-orm = { version = "0.9", features = [ "sqlx-postgres", "runtime-tokio-rustls" ], optional = true }

tataku-proc-macros = { path = "./proc-macros" }