[package]
name = "taiko-rs-client"
version = "0.1.0"
authors = ["Eve <hi.its.eve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bass_audio"]
bass_audio = ["bass-rs"]
neb_audio = ["cpal", "symphonia", "rustfft"]
debug_sliders = []
debug_hitsounds = []
gitlab_build = []

[dependencies]
taiko-rs-common = { path="../taiko-rs-common" }

# framework stuff
rusqlite = { version = "0.25", features = ["bundled"] }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
tokio = { version = "1.7.1", features = ["full"] }
futures-util = { version = "0.3", features = ["async-await", "sink", "std"] }

# piston etc
gl = "0.13"
glfw = { version = "0.42.0", features = ["image"] }
image = "0.23"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glfw_window = { git = "https://github.com/ayyEve/glfw_window" }
piston2d-opengl_graphics = "0.78.0"
ayyeve-piston-ui = { git = "https://gitlab.ayyeve.xyz/ayyEve/ayyeve-piston-ui" }

# bass audio
bass-rs = { version="0.1", optional = true }

# neb audio
cpal = { version = "0.13.3", optional = true }
symphonia = { version = "0.3.0", default-features = false, features = ["mp3", "ogg", "wav", "pcm"], optional = true }
rustfft = { version = "6.0", optional = true }

# networking
sha2 = "0.10"
tokio-tungstenite = {version = "0.16.0", features = ["rustls-tls-native-roots"]}
reqwest = { version = "0.11.4", features = ["blocking"] }

# serde
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

# helpers
zip = "0.5"
uuid = { version = "0.8", features = ["v4"] }
md5 = "0.7.0"
rand = "0.8.4"
clipboard = "0.5.0"

# battery_level = { git = "https://gitlab.ayyeve.xyz/ayyEve/battery-level-rs" }

[build-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
taiko-rs-common = { path="../taiko-rs-common" }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
