[package]
name = "taiko-rs-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = ["sea-orm"]


[dependencies]
num_enum = "0.5.1"

serde = { version="1.0", features=["derive"] }
sea-orm = { version = "0.4", features = [ "sqlx-postgres", "runtime-tokio-rustls" ], optional = true }
