[package]
name = "taiko-rs-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiko-rs-common = {path="../taiko-rs-common"}

rocket  = "0.5.0-rc.1"
tokio   = { version = "1.12.0", features = ["full"] }
sea-orm = { version = "0.2", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }