[package]
name = "taiko-rs-ws"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiko-rs-common = {path="../taiko-rs-common"}

futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.7.1", features = ["full"] }
tokio-tungstenite = "0.15.0"
sea-orm = { version = "0.2", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }