[package]
name = "taiko-rs-ws"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiko-rs-common = { path="../taiko-rs-common", features = ["server"] }

futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
sea-orm = { version = "0.4", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.7.1", features = ["full"] }
tokio-tungstenite = "0.16.0"

argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
serde = { version="1.0", features=["derive"] }
serde_json = "*"