[package]
name = "tataku-common-proc-macro-tests"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tataku-common = { path = "../tataku-common" }
tataku-common-proc-macros = { path = "../tataku-common-proc-macros" }
