[package]
name = "tataku-common-proc-macros"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
packet_logging = []
serialization_logging = []

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "*"
proc-macro2 = "*"

[dev-dependencies]
serde = "1"
tataku-common-proc-macros = { path="." }
tataku-common = { path = "../tataku-common", version="0", registry="tataku-registry" }