[package]
name = "tataku-common"
version = "0.13.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [ "sea-orm" ]
test = [ "tokio" ]

[dependencies]
serde = { version="1.0", features=[ "derive" ] }
serde_json = "1"
sea-orm = { version = "0.9", features = [ "sqlx-postgres", "runtime-tokio-rustls" ], optional = true }

tataku-common-proc-macros = { version = "0.3.0", path = "../tataku-common-proc-macros", registry = "tataku-registry" }

tokio = { version = "*", features = ["full"], optional = true }

downcast-rs = "1.2.1"